--- a/app.json
+++ b/app.json
@@ -12,6 +12,11 @@
       "supportsTablet": true
     },
     "android": {
+      "navigationBar": {
+        "visible": "immersive",
+        "backgroundColor": "#0C1E3A",
+        "barStyle": "light-content"
+      },
       "adaptiveIcon": {
         "backgroundColor": "#E6F4FE",
         "foregroundImage": "./assets/images/android-icon-foreground.png",
